--- a/LoginPage.html
+++ b/LoginPage.html
@@ -152,7 +152,7 @@
           <i class="fa-brands fa-facebook" id="icon"></i>
           <h2 class="hr-lines"> Or do it via Email </h2>
         
-          <form action="coursecontent.html" method="post" class="form">
+          <form action="coursecontent.html" method="get" class="form">
               <h6 class="topic">E-mail</h6><br/><br/>
               <input type="email" placeholder="@mail.com"><br/>
               <h6 class="topic">Password</h6><br/></br>
