--- a/coursecontent.html
+++ b/coursecontent.html
@@ -165,7 +165,7 @@
             <div>
                 <h2>Resources</h2>
                 <ul>
-                    <li><a href="CYBER SECURITY (R18A0521).pdf" download>Week 1 Document</a></li>
+                    <li><a href="Concepts.pdf" download>Week 1 Document</a></li>
                     <li><a href="week1.html">Week 1 Video</a></li>
                     <li><a href="#">Week 2 Document</a></li>
                     <li><a href="#">Week 2 Video</a></li>
